# gst-deepspeech

./: AUTHORS  README.md  aclocal.m4  autogen.sh  configure.ac  meson.build
debian/: changelog  control  copyright  rules
debian/.debhelper/bucket/: index
debian/.debhelper/gstreamer1.0-deepspeech/: dbgsym-build-ids
debian/.debhelper/gstreamer1.0-deepspeech/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/gstreamer1.0-deepspeech/dbgsym-root/usr/share/doc/: gstreamer1.0-deepspeech-dbgsym
examples/python/: print_speech.py
src/: Makefile.am  gstdeepspeech.c  gstdeepspeech.cc  gstdeepspeech.h  meson.build
