plugin_LTLIBRARIES = libgstdeepspeech.la
libgstdeepspeech_la_SOURCES = gstdeepspeech.c gstdeepspeech.h
libgstdeepspeech_la_CFLAGS = $(GST_CFLAGS)
libgstdeepspeech_la_LIBADD = $(GST_LIBS)
libgstdeepspeech_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstdeepspeech_la_LIBTOOLFLAGS = --tag=disable-static
noinst_HEADERS = gstdeepspeech.h
